[tool.poetry]
name = "just-count"
version = "0.2.0"
description = ""
authors = ["AnneliesVlaar <66774020+AnneliesVlaar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "just_count", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.scripts]
square = "just_count.count_count:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
